# Hardware-Password-Manager

./: Cargo.toml  README.md  partitions.csv
.cargo/: config.toml
src/: aes.rs  display.rs  lib.rs  storage.rs  usb.rs
