[package]
edition = "2024"
name = "hardware-password-manager"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "hardware-password-manager"
path = "./src/bin/main.rs"

[dependencies]
embedded-hal = "1.0.0"
esp-hal = { version = "1.1.1", features = ["esp32s3", "unstable"] }

esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3"] }
esp-backtrace = { version = "0.19.0", features = [
    "esp32s3",
    "panic-handler",
    "println",
] }
critical-section = "1.2.0"
esp-rtos = { version = "0.3.0", features = ["embassy", "esp32s3"] }
embassy-executor = "0.10.0"
embassy-usb = "0.6.0"
static_cell = "2.1.1"
usbd-hid = "0.10.0"
embassy-time = "0.5.1"
phf = { version = "0.13.1", default-features = false, features = ["macros"] }
mipidsi = "0.10.0"
embedded-graphics = "0.8.2"
embedded-hal-bus = "0.3.0"
littlefs2 = { version = "0.7.2", default-features = false }
embedded-storage = "0.3.1"
esp-storage = { version = "0.9.0", features = ["esp32s3"] }
aes-gcm = { version = "0.10.3", default-features = false, features = [
    "heapless",
    "aes",
    "getrandom",
] }
getrandom = { version = "0.2", features = ["custom"] }
heapless = "0.9.3"
esp-println = { version = "0.17.0", features = ["esp32s3", "log-04"] }
log = "0.4.32"

[profile.dev]
opt-level = "s"

[profile.dev.package.esp-storage]
opt-level = 3

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
